--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.37.1",
+    "@iconify-json/bx": "^1.1.7",
     "@iconify-json/dashicons": "^1.1.2",
     "@iconify-json/ep": "^1.1.7",
+    "@iconify-json/fluent": "^1.1.35",
     "@iconify-json/ic": "^1.1.10",
     "@iconify-json/icon-park-outline": "^1.1.7",
     "@iconify-json/icon-park-solid": "^1.1.5",
@@ -31,9 +33,11 @@
     "@unocss/transformer-directives": "^0.45.22",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/eslint-config-prettier": "^7.0.0",
+    "axios": "^1.5.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "less": "^4.2.0",
     "prettier": "^2.7.1",
     "unocss": "^0.45.22",
     "unplugin-auto-import": "^0.11.2",
